@@ -756,6 +756,107 @@ PyObject * rpmHeaderFromFile(PyObject * self, PyObject * args, PyObject *kwds)
     return list;
 }
 
+#if defined(DEAD)
+/**
+ * This assumes the order of list matches the order of the new headers, and
+ * throws an exception if that isn't true.
+ */
+int rpmMergeHeaders(PyObject * list, FD_t fd, rpmTag matchTag)
+{
+    HE_t he = memset(alloca(sizeof(*he)), 0, sizeof(*he));
+    Header h;
+    HeaderIterator hi;
+    rpmTagData newMatch;
+    rpmTagData oldMatch;
+    hdrObject * hdr;
+    rpmTagCount count = 0;
+    const char item[] = "Header";
+    rpmRC rc;
+    int xx;
+
+    Py_BEGIN_ALLOW_THREADS
+    h = NULL;
+    rc = rpmpkgRead(item, fd, &h, NULL);
+    Py_END_ALLOW_THREADS
+
+    while (h) {
+	he->tag = matchTag;
+	xx = headerGet(h, he, 0);
+	newMatch.ui32p = he->p.ui32p;
+	if (!xx) {
+	    PyErr_SetString(pyrpmError, "match tag missing in new header");
+	    return 1;
+	}
+
+	hdr = (hdrObject *) PyList_GetItem(list, count++);
+	if (!hdr) return 1;
+
+	he->tag = matchTag;
+	xx = headerGet(h, he, 0);
+	oldMatch.ui32p = he->p.ui32p;
+	if (!xx) {
+	    PyErr_SetString(pyrpmError, "match tag missing in new header");
+	    return 1;
+	}
+
+	if (*newMatch.ui32p != *oldMatch.ui32p) {
+	    PyErr_SetString(pyrpmError, "match tag mismatch");
+	    return 1;
+	}
+
+	for (hi = headerInit(h);
+	    headerNext(hi, he, 0);
+	    he->p.ptr = _free(he->p.ptr))
+	{
+	    /* could be dupes */
+	    headerDel(hdr->h, he, 0);
+	    headerPut(hdr->h, he, 0);
+	}
+	hi = headerFini(hi);
+	h = headerFree(h);
+
+	Py_BEGIN_ALLOW_THREADS
+	h = NULL;
+	rc = rpmpkgRead(item, fd, &h, NULL);
+	Py_END_ALLOW_THREADS
+    }
+
+    return 0;
+}
+
+PyObject *
+rpmMergeHeadersFromFD(PyObject * self, PyObject * args, PyObject * kwds)
+{
+    FD_t fd;
+    int fileno;
+    PyObject * list;
+    int rc;
+    rpmTag matchTag;
+    char * kwlist[] = {"list", "fd", "matchTag", NULL};
+
+    if (!PyArg_ParseTupleAndKeywords(args, kwds, "Oii", kwlist, &list,
+	    &fileno, &matchTag))
+	return NULL;
+
+    if (!PyList_Check(list)) {
+	PyErr_SetString(PyExc_TypeError, "first parameter must be a list");
+	return NULL;
+    }
+
+    fd = fdDup(fileno);
+
+    rc = rpmMergeHeaders (list, fd, matchTag);
+    Fclose(fd);
+
+    if (rc) {
+	return NULL;
+    }
+
+    Py_INCREF(Py_None);
+    return Py_None;
+}
+#endif	/* DEAD */
+
 /**
  */
 PyObject *
